--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "handlebars": "^4.7.7",
     "luxon": "^3.3.0",
     "mysql2": "^3.3.0",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
   }
 }
